WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311543
Fix inverted Y-axis comparison in RenderBox::positionForPoint
https://bugs.webkit.org/show_bug.cgi?id=311543
Summary
Fix inverted Y-axis comparison in RenderBox::positionForPoint
Chris Dumez
Reported
2026-04-05 19:04:31 PDT
Fix inverted Y-axis comparison in RenderBox::positionForPoint.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2026-04-05 19:06:12 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62096
Chris Dumez
Comment 2
2026-04-05 22:13:14 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/58999
EWS
Comment 3
2026-04-06 00:20:42 PDT
Committed
310626@main
(9449d94cd8a3): <
https://commits.webkit.org/310626@main
> Reviewed commits have been landed. Closing PR #62096 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2026-04-06 00:21:12 PDT
<
rdar://problem/174144220
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug